# yarmico

./: DATA.H  DATA.MAK  NY_TITLE.TIM  PSX-4bit.bat  PSX.bat  PSX_VRAM.PSX  TITLE-COMPRESS-255-255.tim  TPAGE00-4bit.tim  TPAGE00.tim  backup.bat  cc1.exe.core  dataman.txt  game.c  makefile  mapfile.txt  pico.tsp  platform_NY.c  platform_NY.h  readme.md  readme.txt  square.VAB  square.VAG  square.VB  square.VH  yarmico.cue  yarmico_API.c  yarmico_config.h
32blit-picosystem/: CMakeLists.txt  assets-pico.yml  assets.yml  backup.sh  build.h  emscripten-shell.html  game.h  link.txt  load_gamecontrollerdb.hpp  metadata.yml  platform_32blit.cpp  platform_32blit.hpp  readme.txt  yarmico_API.h  yarmico_config.h
builds/: readme.md  readme.txt
builds/00-deploy/: yarmico-PlayStation.7z
builds/00-deploy/32blit/: yarmico.blit
builds/00-deploy/HTML5/: index.html  pico.html  pico.js  pico.wasm
builds/00-deploy/picosystem/: yarmico.uf2
